--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "regenerator-runtime": "^0.13.9",
     "resolve": "1.15.0",
     "resolve-url-loader": "^3.1.1",
     "sass-loader": "8.0.2",
