--- a/package.json
+++ b/package.json
@@ -168,6 +168,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "clean-jsdoc-theme": "^2.2.11",
     "jsdoc": "^3.6.6"
   },
